@@ -27,6 +27,22 @@ subprojects {
       testLogging {
         exceptionFormat 'full'
       }
+      if (JavaVersion.current().isJava9Compatible()) {
+        def options = [
+          '--add-opens=java.base/java.lang=ALL-UNNAMED', 
+          '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED', 
+          '--add-opens=java.base/java.io=ALL-UNNAMED',
+          '--add-opens=java.base/java.net=ALL-UNNAMED',
+          '--add-opens=java.base/java.nio=ALL-UNNAMED',
+          '--add-opens=java.base/java.util=ALL-UNNAMED',
+          '--add-opens=java.base/java.util.jar=ALL-UNNAMED',
+          '--add-opens=java.base/java.util.regex=ALL-UNNAMED',
+          '--add-opens=java.base/java.util.zip=ALL-UNNAMED',
+          '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
+        ]
+        jvmArgs options
+        environment 'JAVA_OPTS': options.join(' ')
+      }
       inputs.files(fileTree(projectDir) {
         include testfolders
         exclude {
